spec/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coronavirus-db-service
  namespace: cv
spec:
  ports:
  - port: 3000
    name: grafana
  - port: 3306
    name: mysql
  - port: 8080
    name: adminer
  selector:
    app: coronavirus-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  app: coronavirus-db
  name: coronavirus-db
  namespace: cv
spec:
  selector:
    matchLabels:
      app: coronavirus-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: coronavirus-db
    spec:
      restartPolicy: Always
      containers:
      - image: grafana/grafana:master
        name: grafana
        ports:
          - containerPort: 3000
            name: grafana
      - image: adminer
        name: adminer
        ports:
          - containerPort: 8080
            name: adminer
      - image: mariadb
        name: mysql
        args:
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
